parser/tests/snapshots/test_parser__expr_num2.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(expr_num2), expressions::parse_expr, \"00001\")"

---
Node(
  kind: Num("00001"),
  span: Span(
    start: 0,
    end: 5,
  ),
)
