parser/tests/snapshots/test_parser__expr_tuple1.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(expr_tuple1), expressions::parse_expr, \"(1,)\")"

---
Node(
  kind: Tuple(
    elts: [
      Node(
        kind: Num("1"),
        span: Span(
          start: 1,
          end: 2,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 4,
  ),
)
