parser/tests/snapshots/test_parser__expr_tuple3.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(expr_tuple3), expressions::parse_expr,\n           \"(1, (2 + 3), (3 * 4, 5))\")"

---
Node(
  kind: Tuple(
    elts: [
      Node(
        kind: Num("1"),
        span: Span(
          start: 1,
          end: 2,
        ),
      ),
      Node(
        kind: BinOperation(
          left: Node(
            kind: Num("2"),
            span: Span(
              start: 5,
              end: 6,
            ),
          ),
          op: Node(
            kind: Add,
            span: Span(
              start: 7,
              end: 8,
            ),
          ),
          right: Node(
            kind: Num("3"),
            span: Span(
              start: 9,
              end: 10,
            ),
          ),
        ),
        span: Span(
          start: 4,
          end: 11,
        ),
      ),
      Node(
        kind: Tuple(
          elts: [
            Node(
              kind: BinOperation(
                left: Node(
                  kind: Num("3"),
                  span: Span(
                    start: 14,
                    end: 15,
                  ),
                ),
                op: Node(
                  kind: Mult,
                  span: Span(
                    start: 16,
                    end: 17,
                  ),
                ),
                right: Node(
                  kind: Num("4"),
                  span: Span(
                    start: 18,
                    end: 19,
                  ),
                ),
              ),
              span: Span(
                start: 14,
                end: 19,
              ),
            ),
            Node(
              kind: Num("5"),
              span: Span(
                start: 21,
                end: 22,
              ),
            ),
          ],
        ),
        span: Span(
          start: 13,
          end: 23,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 24,
  ),
)
